# newerahpc

./: Introduction.md  ProjectHome.md  Wiki_moved.md  index.md
core/src/network/: Makefile.am  Makefile.in  nhpc_accept.cpp  nhpc_communication.cpp  nhpc_connection.cpp  nhpc_event.cpp  nhpc_event_kqueue.cpp  nhpc_headers.cpp  nhpc_http.cpp  nhpc_http_parse.cpp  nhpc_http_request.cpp  nhpc_http_response.cpp  nhpc_recv.cpp  nhpc_send.cpp  nhpc_server.cpp  nhpc_worker.cpp
grid/: Makefile.am  Makefile.in  configure  configure.ac  server.cpp  test_client.cpp
grid/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
grid/include/: grid_client.h  grid_client_instruction_generator.h  grid_client_registration.h  grid_communication.h  grid_controller_register.h  grid_data.h  grid_data_download.h  grid_default_plugins.h  grid_error.h  grid_http_interface.h  grid_instruction.h  grid_instruction_data_type.h  grid_instruction_set.h  grid_node.h  grid_plugin.h  grid_plugin_range.h  grid_request_handlers.h  grid_response.h  grid_scheduler.h  grid_server.h  grid_tmpfs.h  grid_uid.h  html_template.h
grid/sample_plugin/: Makefile  sample_plugin.cpp
grid/src/: Makefile.am  Makefile.in  grid.cpp
grid/src/grid/: Makefile  Makefile.am  Makefile.in  grid_communication.cpp  grid_data.cpp  grid_data_download.cpp  grid_instruction_handler.cpp  grid_instruction_set.cpp  grid_node.cpp  grid_plugin.cpp  grid_plugin_range.cpp  grid_request_handlers.cpp  grid_response.cpp  grid_scheduler.cpp  grid_server.cpp  grid_tmpfs.cpp  grid_uid.cpp
grid/src/grid_client/: Makefile.am  Makefile.in  grid_client_instruction_generator.cpp  grid_client_registration.cpp  grid_controller_register.cpp
grid/src/grid_interface/: Makefile.am  Makefile.in  grid_http_interface.cpp
grid/tests/: Makefile.am
grid/tests/grid/: Makefile  Makefile.in  simple_client.cpp
jarvis/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  jarvis_grid.cpp  jarvis_grid_client.cpp  main.cpp
jarvis/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
jarvis/data/dict/: data.verb  noun.exc
jarvis/data/lists/: adjectives  relations  verbs
jarvis/data/words/: function:a  function:this  node:mine  relation:is  relation:mine  relation:my  verb:mined
jarvis/include/: compare.h  general.h  grid_plugin.h  jarvis.h  jarvis_data.h  morphological_rules.h  parse.h  parse_data.h  parse_index.h  parse_json_structure.h  web_interface.h  words.h  words_data.h
jarvis/src/: Makefile.am  Makefile.in  grid_plugin.cpp  jarvis.cpp  jarvis_data.cpp
jarvis/src/general/: Makefile.am  Makefile.in  compare.cpp  morphological_rules.cpp  parse.cpp  parse_data.cpp  parse_index.cpp  parse_json_structure.cpp  sentence_parser.cpp  words.cpp
jarvis/src/web_interface/: Makefile.am  Makefile.in  web_interface.cpp
neweraHPC3/: Makefile  Makefile.am  Makefile.in  Makefile.inc  README  aclocal.m4  config.h.in  configure  configure.ac  server.cpp
neweraHPC3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
neweraHPC3/include/: alloc.h  cfg.h  communication.h  config.h  constants.h  containers.h  error.h  file.h  general.h  grid.h  grid_client.h  grid_communication.h  grid_data.h  grid_instruction_set.h  grid_plugin.h  grid_scheduler.h  grid_server.h  headers.h  heap.h  http.h  http_data.h  http_status.h  json.h  list.h  network.h  network_data.h  neuron.h  neweraHPC.h  nhpc_constants.h  nui.h  nui_html.h  plugin_manager.h  poll.h  rbtree.h  sockets.h  sockopts.h  strings.h  strings_pool.h  system.h  system_memory.h  (+3 more)
neweraHPC3/include/general/: containers.h
neweraHPC3/include/network/: headers.h
neweraHPC3/samples/: plugin.nxi
neweraHPC3/src/: Makefile  Makefile.am  Makefile.in  neweraHPC.cpp
neweraHPC3/src/ai/: Makefile.am  Makefile.in  dict.xml  dictionary.cpp  neuron.cpp
neweraHPC3/src/general/: Makefile  Makefile.am  Makefile.in  alloc.cpp  cfg.cpp  error.cpp  file.cpp  heap.cpp  list.cpp  parse_tree.cpp  rbtree.cpp  strings.cpp  strings_pool.cpp  thread.cpp  tree.cpp
neweraHPC3/src/grid/: Makefile.am  Makefile.in  grid.cpp  grid_client.cpp  grid_communication.cpp  grid_execute.cpp  grid_instruction_set.cpp  grid_nxi.cpp  grid_plugin.cpp  grid_range.cpp  grid_scheduler.cpp  grid_server.cpp
neweraHPC3/src/internal/: Makefile.am  Makefile.in  main.cpp
neweraHPC3/src/network/: Makefile  Makefile.am  Makefile.in  communication.cpp  headers.cpp  network.cpp  sendrecv.cpp  socket.cpp  sockets.cpp  sockopts.cpp  waitio.cpp
neweraHPC3/src/poll/: Makefile.am  Makefile.in  wait_io.cpp
neweraHPC3/src/system/: Makefile.am  Makefile.in  system.cpp  system_cpu.cpp  system_fork.cpp  system_memory.cpp
neweraHPC3/tests/: Makefile  Makefile.am  Makefile.in
neweraHPC3/tests/general/: Makefile  Makefile.am  Makefile.in  cfg_test.cpp  (+5 more)
neweraHPC_crawler/: Makefile.am  Makefile.in  configure  configure.ac  html_parser.cpp  parser.cpp  test.html
neweraHPC_crawler/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
neweraHPC_crawler/include/: fetch_page.h  html_parser.h  url.h
neweraHPC_crawler/src/: Makefile.am  Makefile.in  fetch_page.cpp  html_parser.cpp  url.cpp
neweraHPC_ui/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  main.cpp
neweraHPC_ui/include/: app_triggers.h  nui.h  webui.h
neweraHPC_ui/src/: Makefile.am  Makefile.in
neweraPaaS/: Makefile.am  Makefile.in  configure  configure.ac  neweraPaaS.cpp
neweraPaaS/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
neweraPaaS/dashboard/: index.php  install.php  sample_db.sql
neweraPaaS/py/: containers.py  errors.py  main.py  neweraPaaS  neweraPaaS.py  paas.conf  paas_config.py  paas_containers.py  paas_containers.py.save  paas_errors.py  paas_images.py  paas_lxc_interface.py  paas_mount.py  paas_mount_aufs.py  paas_mount_overlayfs.py  paas_mysql.py  paas_network.py  paas_platform.py  paas_sample.conf  paas_server.py
neweraPaaS/src/: Makefile.am  Makefile.in
neweraPaaS/utils/: post_stage_validate.sh
(+225 files in other folders)
