SUBDIRS = network general internal poll ai

lib_LTLIBRARIES         = libneweraHPC.la
libneweraHPC_la_SOURCES = 
libneweraHPC_la_LIBADD  = network/libnetwork.la general/libgeneral.la internal/libinternal.la poll/libpoll.la ai/libai.la
libneweraHPC_la_LDFLAGS = -version-info 2:90
libneweraHPC_la_CFLAGS  = CFLAGS

