SOURCES = nhpc_socket.cpp nhpc_server.cpp nhpc_accept.cpp nhpc_waitio.cpp nhpc_connection.cpp nhpc_http.cpp nhpc_http_request.cpp \
nhpc_communication.cpp nhpc_recv.cpp nhpc_send.cpp nhpc_event.cpp nhpc_event_kqueue.cpp nhpc_worker.cpp

noinst_LTLIBRARIES    = libnetwork.la 
libnetwork_la_SOURCES = $(SOURCES)
