SOURCES = grid_communication.cpp grid_server.cpp grid_request_handlers.cpp grid_data.cpp grid_uid.cpp grid_node.cpp grid_response.cpp\
grid_instruction_handler.cpp grid_data_download.cpp grid_plugin.cpp grid_plugin_range.cpp grid_instruction_set.cpp

noinst_LTLIBRARIES = libgrid.la
libgrid_la_SOURCES = $(SOURCES)
libgrid_la_LDFLAGS = -lpthread -ldl 
libgrid_la_CFLAGS  = CFLAGS
