ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

SOURCES = words.cpp sentence_parser.cpp parse_index.cpp morphological_rules.cpp parse_data.cpp compare.cpp parse_json_structure.cpp parse.cpp

noinst_LTLIBRARIES     = libgeneral.la
libgeneral_la_SOURCES  = $(SOURCES)
libgeneral_la_CPPFLAGS = $(neweraHPC_CFLAGS)


